express-2-gke/k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${VM_ID}
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ${VM_ID}
    spec:
      containers:
      - name: ${VM_ID}
        image: gcr.io/${PROJECT_ID}/${VM_ID}:${VERSION}
        ports:
        - containerPort: 80
