express-2-gke/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.allow-http: "false"
    certmanager.k8s.io/issuer: "issuer"
    certmanager.k8s.io/acme-challenge-type: http01
  name: ${VM_ID}
spec:
  tls:
  - hosts:
    - ${DOMAIN}
    secretName: ${VM_ID}-tls
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: ${VM_ID}
          servicePort: 3000
